tests/frontend/pass/array/cross_contract2.act
constructor of A
interface constructor()

creates

  uint[3] ar := [1,2,3]



constructor of B
interface constructor(address a)

pointers

  a |-> A

creates

  A x := a

ensures post(x.ar[2]) == 0
